Fixed overflow scrollbar problem we got from using flexbox's `justify-content: center` which placed the children weirly when the parent was getting smushed by the viewport, thus making the scroll go from "kind-of" the center of the children to the rightmost edge of the last child; Now it correctly centers all of the flexed children when viewport is larger than the childs combined width, while not smushing the overflowing parent when the viewport gets smalller.
Also to note; we preserved the parenting classless div that got it's style from an pseudo css selector

--- a/styles.css
+++ b/styles.css
@@ -87,9 +87,13 @@ ul {
 }
 
 .boxes {
-  display: flex;
   overflow-x: auto;
-  justify-content: center;
+  text-align: center;
+}
+
+.boxes > div {
+  display: inline-flex;
+  text-align: left;
 }
 
 .box {
